Mark 32bit pipeline to be skipped in WIP: merge requests.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -141,6 +141,9 @@ make_bullseye:
 make_32bit_bullseye:
   <<: *make_definition
   <<: *artifacts_definition
+  before_script:
+    # there can be only one before_script:, so the line below cannot be in a separate template
+    - if [[ ${CI_MERGE_REQUEST_TITLE:0:4} == "WIP:" ]] ; then export SKIP_TEST="SKIP_TEST"; else echo "non-WIP merge request detected"; fi
   image: registry.gitlab.com/yade-dev/docker-yade:debian-32bit-bullseye
 
 make_no_mpi:
@@ -313,6 +316,7 @@ test_bullseye:
 
 test_32bit_bullseye:
   <<: *test_definition
+  <<: *skip_wip_test_definition
   image: registry.gitlab.com/yade-dev/docker-yade:debian-32bit-bullseye
   dependencies:
     - make_32bit_bullseye
@@ -452,7 +456,7 @@ check_bullseye:
 
 check_32bit_bullseye:
   <<: *check_definition
-  before_script:
+  <<: *skip_wip_test_definition
   image: registry.gitlab.com/yade-dev/docker-yade:debian-32bit-bullseye
   dependencies:
     - make_32bit_bullseye
