--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -99,6 +99,8 @@ stages:
     - if [[ ${TESTS_AFTER_MAKE} == "TESTS_AFTER_MAKE" ]] ; then install/bin/yade-ci --check; fi
     - if [[ ${TESTS_AFTER_MAKE} == "TESTS_AFTER_MAKE" ]] ; then xvfb-run -a -s "-screen 0 1600x1200x16" scripts/checks-and-tests/gui/testGui.sh; fi
     - if [[ ${TESTS_AFTER_MAKE} == "TESTS_AFTER_MAKE" ]] ; then install/bin/yade-ci --quickperformance -j8; fi
+    - cat /etc/os-release
+    - /usr/bin/dpkg --print-architecture
   tags:
     - fast
 
@@ -262,6 +264,7 @@ make_SSE:
     - if [[ ${SKIP_TEST} == "SKIP_TEST" ]] || [[ ${NO_GUI} == "NO_GUI" ]] ; then echo -e "\n\e[93m===\nSkipping GUI test.\n===\e[0m\n"; else xvfb-run -a -s "-screen 0 1600x1200x16" scripts/checks-and-tests/gui/testGui.sh; fi
     - if [[ ${SKIP_TEST} == "SKIP_TEST" ]] ; then echo -e "\n\e[93m===\nSkipping --quickperformance -j8 test, because it's a WIP merge request.\n===\e[0m\n"; else install/bin/yade-ci --quickperformance -j8; fi
     - cat /etc/os-release
+    - /usr/bin/dpkg --print-architecture
   timeout: 45 minutes
   artifacts:
     when: always
@@ -412,6 +415,8 @@ test_SSE:
 #    - export OMPI_MCA_mpi_yield_when_idle=1 #degraded mode when oversubscribing (https://www.open-mpi.org/faq/?category=running#oversubscribing)
   script:
     - if [[ ${SKIP_TEST} == "SKIP_TEST" ]] ; then echo -e "\n\e[93m===\nSkipping this check, because it's a WIP merge request.\n===\e[0m\n"; else install/bin/yade-ci --checks; fi
+    - cat /etc/os-release
+    - /usr/bin/dpkg --print-architecture
   timeout: 45 minutes
 
 check_16_04:
