Restore previous (from 9f66ed5a8) test,check time limit of 25 minutes, but use 'retry: always' option. Maybe this the retries up to three times will work.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,14 +23,10 @@ stages:
 .gitlab_runner_retry_template: &gitlab_runner_retry_definition
   retry:
     max: 2
-    when:
-      - runner_system_failure
-      - stuck_or_timeout_failure
-      - unknown_failure
+    when: always
 
 # If you want to compile everything also on merge_request, change this template.
 .plaftorms_template: &platforms_definition
-  <<: *gitlab_runner_retry_definition
   only:
     - master
     - merge_request
@@ -54,6 +50,7 @@ stages:
 
 .make_template: &make_definition
   <<: *platforms_definition
+  <<: *gitlab_runner_retry_definition
   stage: build
   script:
     - export GCC_COLORS="error=01;31:warning=01;35:note=01;36:range1=04;32:range2=04;34:locus=93:quote=07;96:fixit-insert=92:fixit-delete=91:diff-filename=01;91:diff-hunk=33:diff-delete=31:diff-insert=32"
@@ -258,6 +255,7 @@ make_SSE:
 # 3.1. test stage
 .test_template: &test_definition
   <<: *platforms_definition
+  <<: *gitlab_runner_retry_definition
   stage: test
   script:
     - if [[ ${SKIP_TEST} == "SKIP_TEST" ]] ; then echo -e "\n\e[93m===\nSkipping this test, because it's a WIP merge request.\n===\e[0m\n"; else install/bin/yade-ci --test; fi
@@ -265,7 +263,7 @@ make_SSE:
     - if [[ ${SKIP_TEST} == "SKIP_TEST" ]] ; then echo -e "\n\e[93m===\nSkipping --quickperformance -j8 test, because it's a WIP merge request.\n===\e[0m\n"; else install/bin/yade-ci --quickperformance -j8; fi
     - cat /etc/os-release
     - /usr/bin/dpkg --print-architecture
-  timeout: 45 minutes
+  timeout: 25 minutes
   artifacts:
     when: always
     paths:
@@ -367,13 +365,14 @@ test_suse15:
   needs: ["make_suse15"]
 
 test_18_foam:
+  <<: *platforms_definition
+  <<: *gitlab_runner_retry_definition
   stage: test
   image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04_foam
-  <<: *platforms_definition
   dependencies:
     - make_18_04
   needs: ["make_18_04"]
-  timeout: 45 minutes
+  timeout: 25 minutes
   script:
     - cat /etc/os-release
     - export OMPI_MCA_btl_vader_single_copy_mechanism=none
@@ -408,6 +407,7 @@ test_SSE:
 # 3.2. check stage
 .check_template: &check_definition
   <<: *platforms_definition
+  <<: *gitlab_runner_retry_definition
   stage: test
 #  before_script:
 #    - export OMPI_MCA_rmaps_base_oversubscribe=1
@@ -417,7 +417,7 @@ test_SSE:
     - if [[ ${SKIP_TEST} == "SKIP_TEST" ]] ; then echo -e "\n\e[93m===\nSkipping this check, because it's a WIP merge request.\n===\e[0m\n"; else install/bin/yade-ci --checks; fi
     - cat /etc/os-release
     - /usr/bin/dpkg --print-architecture
-  timeout: 45 minutes
+  timeout: 25 minutes
 
 check_16_04:
   <<: *check_definition
@@ -536,6 +536,7 @@ check_SSE:
 # 4. doc stage
 doc_18_04:
   <<: *doc_definition
+  <<: *gitlab_runner_retry_definition
   image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
   dependencies:
     - make_18_04
