Making Py3 required for MPI compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -842,6 +842,7 @@ ELSE(ENABLE_PFVFLOW AND ENABLE_LINSOLV)
 ENDIF(ENABLE_PFVFLOW AND ENABLE_LINSOLV)
 #===============================================
 IF(ENABLE_MPI)
+  IF(${PYTHON_VERSION_STRING} VERSION_GREATER 3)
   FIND_PACKAGE(MPI REQUIRED)
   FIND_PACKAGE(MPI4PY REQUIRED)
   IF (MPI_FOUND AND MPI4PY_FOUND)
@@ -870,6 +871,10 @@ IF(ENABLE_MPI)
     MESSAGE(STATUS "MPI NOT FOUND, YADE-OpenFOAM coupling disabled")
     SET (DISABLED_FEATS "${DISABLED_FEATS} MPI")
   ENDIF(MPI_FOUND AND MPI4PY_FOUND)
+  ELSE(${PYTHON_VERSION_STRING} VERSION_GREATER 3)
+    MESSAGE(STATUS "MPI was disabled automatically because it requires Python 3 and you'll use ${PYTHON_VERSION_STRING}")
+    SET(DISABLED_FEATS "${DISABLED_FEATS} MPI")
+ ENDIF(${PYTHON_VERSION_STRING} VERSION_GREATER 3)
 ELSE(ENABLE_MPI)
     SET (DISABLED_FEATS "${DISABLED_FEATS} MPI")
 ENDIF(ENABLE_MPI)
