Update CMakeLists.txt about QT4 being no longer supported.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -691,26 +691,7 @@ IF(ENABLE_GUI)
       SET(ENABLE_GUI OFF)
     ENDIF(Qt5Widgets_FOUND AND OPENGL_FOUND AND GLUT_FOUND AND GLIB2_FOUND AND QGLVIEWER_FOUND)
   ELSE(USE_QT5)   # Use Qt4
-    MESSAGE(STATUS "USE QT4")
-    FIND_PACKAGE(QGLVIEWER-qt4 REQUIRED)
-    FIND_PACKAGE(Qt4 COMPONENTS QtCore QtGui QtOpenGL)
-    IF(QT4_FOUND AND OPENGL_FOUND AND GLUT_FOUND AND GLIB2_FOUND AND QGLVIEWER_FOUND)
-      SET(GUI_LIBS ${GLUT_LIBRARY} ${OPENGL_LIBRARY} ${QGLVIEWER_LIBRARIES})
-      SET(GUI_SRC_LIB "lib/opengl/GLUtils.cpp")
-      SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DYADE_OPENGL -DYADE_QT4")
-      SET(Used_QT_VERSION_MAJOR ${QT_VERSION_MAJOR})
-      SET(Used_QT_VERSION_MINOR ${QT_VERSION_MINOR})
-      SET(Used_QT_VERSION_PATCH ${QT_VERSION_PATCH})
-      INCLUDE_DIRECTORIES(${GLIB2_INCLUDE_DIRS})
-      INCLUDE_DIRECTORIES(${QT_INCLUDES})
-
-      MESSAGE(STATUS "Found GUI-LIBS")
-      SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} GUI")
-    ELSE(QT4_FOUND AND OPENGL_FOUND AND GLUT_FOUND AND GLIB2_FOUND AND QGLVIEWER_FOUND)
-      MESSAGE(STATUS "GUI-LIBS NOT found")
-      SET(DISABLED_FEATS "${DISABLED_FEATS} GUI")
-      SET(ENABLE_GUI OFF)
-    ENDIF(QT4_FOUND AND OPENGL_FOUND AND GLUT_FOUND AND GLIB2_FOUND AND QGLVIEWER_FOUND)
+    MESSAGE(FATAL_ERROR "QT4 is no longer supported")
   ENDIF(USE_QT5)
 ELSE(ENABLE_GUI)
   SET(DISABLED_FEATS "${DISABLED_FEATS} GUI")
