--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,6 +53,41 @@ stages:
   <<: *gitlab_runner_retry_definition
   stage: build
   script:
+    - mkdir install
+    - if [[ -e "/usr/bin/clang-format" ]] ; then
+          export CLANG_VERSION=`clang-format --version | sed -e 's/^.*version\s\([0-9]\+\).*$/\1/g'` ;
+          if [ ${CLANG_VERSION} -ge "7" ] ; then
+                  scripts/clang-formatter.sh ./ ;
+                  export CHANGED_LINES=`git diff --shortstat | sed -e 's/^.*insertions(+),\s\([0-9]\+\)\sdeletions.*$/\1/g'` ;
+                  echo $CHANGED_LINES ;
+                  if [ ${CHANGED_LINES} -ge "200" ] ; then
+                          echo -e "\n\e[91m===\n*** ERROR *** clang-format produces very different output.\nYou can use command\n\n    scripts/clang-formatter.sh \$YOUR_FILE\n\nto fix this\nIt is possible that some other files will be modified, because apparently different versions of clang-format have (very small) differences in the output.\n===\e[0m\n \n";
+                          echo -e "\n\e[96m===\n*** NOTE *** if your formatting is better that what clang-format provides, you can use:\n\n    // clang-format off\n    ......\n    // clang-format on\n\nlike it is done with YADE_CLASS_* macros in all .hpp files.\n===\e[0m\n" ;
+                          echo -e "\n \n\e[95m*** See the most affected files below ***\e[0m\n \n" ;
+                          git diff --stat ;
+                          echo -e "\n \n\e[95mLines\nAdded | Removed\e[0m\n" ;
+                          git diff --numstat ;
+                          echo -e "\n \n\e[95m*** Full 'git diff' is in artifacts path ./install/reformat.txt ***\e[0m\n" ;
+                          echo -e "\e[95m*** Apart from 'scripts/clang-formatter.sh ./', you also can download the diff and use the following command ***\e[0m\n" ;
+                          echo -e "\e[95m    patch -p1 < ./reformat.txt\e[0m\n \n" ;
+                          git diff > ./install/reformat.txt ;
+                          exit 1 ;
+                  else
+                          echo -e "\n\e[92m===\nclang-format check OK\n===\e[0m\n" ;
+                  fi;
+          else
+                  echo -e "\n\e[93m===\nSkipping  clang-format check (version too old)\n===\e[0m\n" ;
+          fi;
+      else
+          echo -e "\n\e[93m===\nSkipping  clang-format check (can't find clang-format)\n===\e[0m\n" ;
+      fi
+    # remove any clang formatting changes
+    - git diff
+    - git reset --hard
+    - git diff
+    - git status
+    - git log --oneline -n 5
+    # OK source code is as it should be.
     - export GCC_COLORS="error=01;31:warning=01;35:note=01;36:range1=04;32:range2=04;34:locus=93:quote=07;96:fixit-insert=92:fixit-delete=91:diff-filename=01;91:diff-hunk=33:diff-delete=31:diff-insert=32"
     - export CXXFLAGS="-fdiagnostics-color=always $CXXFLAGS"
     - echo $CXXFLAGS
@@ -104,6 +139,7 @@ stages:
 
 .artifacts_template: &artifacts_definition
   artifacts:
+    when: always
     paths:
       - install
     expire_in: 2 weeks
