--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -159,6 +159,11 @@ make_18_04:
     expire_in: 2 weeks
   image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
 
+make_20_04:
+  <<: *make_definition
+  <<: *artifacts_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu20.04
+
 make_stretch:
   <<: *make_definition
   <<: *artifacts_definition
@@ -405,6 +410,13 @@ test_18_04:
     - make_18_04
   needs: ["make_18_04"]
 
+test_20_04:
+  <<: *test_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu20.04
+  dependencies:
+    - make_20_04
+  needs: ["make_20_04"]
+
 test_stretch:
   <<: *test_definition
   image: registry.gitlab.com/yade-dev/docker-yade:debian-stretch
@@ -578,6 +590,13 @@ check_18_04:
   dependencies:
     - make_18_04
   needs: ["make_18_04"]
+
+check_20_04:
+  <<: *check_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu20.04
+  dependencies:
+    - make_20_04
+  needs: ["make_20_04"]
 
 check_stretch:
   <<: *check_definition
@@ -798,6 +817,13 @@ deb_stretch:
     - rm -rf ./deb
     - ./scripts/ppa_ci/builddeb.py -d "stretch"
 
+deb_xenial:
+  <<: *deb_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu16.04
+  before_script:
+    - rm -rf ./deb
+    - ./scripts/ppa_ci/builddeb.py -d "xenial"
+
 deb_bionic:
   <<: *deb_definition
   image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
@@ -805,10 +831,10 @@ deb_bionic:
     - rm -rf ./deb
     - ./scripts/ppa_ci/builddeb.py -d "bionic"
 
-deb_xenial:
+deb_focal:
   <<: *deb_definition
-  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu16.04
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu20.04
   before_script:
     - rm -rf ./deb
-    - ./scripts/ppa_ci/builddeb.py -d "xenial"
+    - ./scripts/ppa_ci/builddeb.py -d "focal"
 
