--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -328,7 +328,7 @@ mkHP_long_double:
     - echo $EXTRA_CMAKE_ARGS
   image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye
 
-mkHP_float128:
+mkHP_20_04_float128:
   <<: *make_definition
   <<: *artifacts_definition
   before_script:
@@ -336,9 +336,9 @@ mkHP_float128:
     - if [[ ${CI_MERGE_REQUEST_TITLE:0:4} == "WIP:" ]] ; then export SKIP_TEST="SKIP_TEST"; else echo "non-WIP merge request detected"; fi
     - export EXTRA_CMAKE_ARGS="-DREAL_DECIMAL_PLACES=33 $EXTRA_CMAKE_ARGS"
     - echo $EXTRA_CMAKE_ARGS
-  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu20.04
 
-mkHP_mpfr150:
+mkHP_20_04_mpfr150:
   <<: *make_definition
   <<: *artifacts_definition
   before_script:
@@ -346,7 +346,7 @@ mkHP_mpfr150:
     - if [[ ${CI_MERGE_REQUEST_TITLE:0:4} == "WIP:" ]] ; then export SKIP_TEST="SKIP_TEST"; else echo "non-WIP merge request detected"; fi
     - export EXTRA_CMAKE_ARGS="-DREAL_DECIMAL_PLACES=150 -DENABLE_MPFR=ON $EXTRA_CMAKE_ARGS"
     - echo $EXTRA_CMAKE_ARGS
-  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu20.04
 
 mkHP_bf45:
   <<: *make_definition
@@ -527,22 +527,22 @@ tstHP_long_double:
   needs: ["mkHP_long_double"]
   timeout: 4 hours
 
-tstHP_float128:
+tstHP_20_04_float128:
   <<: *test_definition
   <<: *skip_wip_test_definition
-  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu20.04
   dependencies:
-    - mkHP_float128
-  needs: ["mkHP_float128"]
+    - mkHP_20_04_float128
+  needs: ["mkHP_20_04_float128"]
   timeout: 4 hours
 
-tstHP_mpfr150:
+tstHP_20_04_mpfr150:
   <<: *test_definition
   <<: *skip_wip_test_definition
-  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu20.04
   dependencies:
-    - mkHP_mpfr150
-  needs: ["mkHP_mpfr150"]
+    - mkHP_20_04_mpfr150
+  needs: ["mkHP_20_04_mpfr150"]
   timeout: 4 hours
 
 tstHP_bf45:
@@ -687,22 +687,22 @@ ckHP_long_double:
   needs: ["mkHP_long_double"]
   timeout: 4 hours
 
-ckHP_float128:
+ckHP_20_04_float128:
   <<: *check_definition
   <<: *skip_wip_test_definition
-  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu20.04
   dependencies:
-    - mkHP_float128
-  needs: ["mkHP_float128"]
+    - mkHP_20_04_float128
+  needs: ["mkHP_20_04_float128"]
   timeout: 4 hours
 
-ckHP_mpfr150:
+ckHP_20_04_mpfr150:
   <<: *check_definition
   <<: *skip_wip_test_definition
-  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu20.04
   dependencies:
-    - mkHP_mpfr150
-  needs: ["mkHP_mpfr150"]
+    - mkHP_20_04_mpfr150
+  needs: ["mkHP_20_04_mpfr150"]
   timeout: 4 hours
 
 ckHP_bf45:
