Increase number to 50 ignored lines, ignore whitespace.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,13 +54,14 @@ stages:
   stage: build
   script:
     - mkdir install
+    # the command 'git diff -w --shortstat' counts the number of changes. The '-w' tells it to ignore whitespace.
     - if [[ -e "/usr/bin/clang-format" ]] ; then
           export CLANG_VERSION=`clang-format --version | sed -e 's/^.*version\s\([0-9]\+\).*$/\1/g'` ;
           if [ ${CLANG_VERSION} -ge "7" ] ; then
                   scripts/clang-formatter.sh ./ ;
-                  export CHANGED_LINES=`git diff --shortstat | sed -e 's/^.*insertions(+),\s\([0-9]\+\)\sdeletions.*$/\1/g'` ;
+                  export CHANGED_LINES=`git diff -w --shortstat | sed -e 's/^.*insertions(+),\s\([0-9]\+\)\sdeletions.*$/\1/g'` ;
                   echo $CHANGED_LINES ;
-                  if [ ${CHANGED_LINES} -ge "40" ] ; then
+                  if [ ${CHANGED_LINES} -ge "50" ] ; then
                           echo -e "\n\e[91m===\n*** ERROR *** clang-format produces very different output.\nYou can use command\n\n    scripts/clang-formatter.sh \$YOUR_FILE\n\nto fix this\nIt is possible that some other files will be modified, because apparently different versions of clang-format have (very small) differences in the output.\n===\e[0m\n \n";
                           echo -e "\n\e[96m===\n*** NOTE *** if your formatting is better that what clang-format provides, you can use:\n\n    // clang-format off\n    ......\n    // clang-format on\n\nlike it is done with YADE_CLASS_* macros in all .hpp files.\n===\e[0m\n" ;
                           echo -e "\n \n\e[95m*** See the most affected files below ***\e[0m\n \n" ;
