--- a/py/__init__.py.in
+++ b/py/__init__.py.in
@@ -111,8 +111,14 @@ else:
 	import builtins
 builtins.__dict__['O'] = O
 builtins.__dict__['Omega'] = wrapper.Omega
+
+#this will allow in python3 direct use of yade modules with import module_name (normally forbidden)
+sys.path.insert(2,os.path.realpath(__file__).rsplit("/",1)[0])
+
+# FIXME: this should go somewhere else, but where? userSession() might be too late since there is possible script execution before it.
+
 # define a default list of engine
-O.engines=[
+yade.utils.defaultEngines=[
 		ForceResetter(),
 		InsertionSortCollider([Bo1_Sphere_Aabb(),Bo1_Facet_Aabb(),Bo1_Box_Aabb()],label="collider"),
 		InteractionLoop(
@@ -124,6 +130,5 @@ O.engines=[
 		GlobalStiffnessTimeStepper(timeStepUpdateInterval=10,label="timeStepper"),
 		NewtonIntegrator(label="newton")
 	]
+O.engines=yade.utils.defaultEngines
 
-#this will allow in python3 direct use of yade modules with import module_name (normally forbidden)
-sys.path.insert(2,os.path.realpath(__file__).rsplit("/",1)[0])
