Improve cmake message.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -492,7 +492,7 @@ ENDIF()
 IF(REAL_MULTI_HP)
   SET(REAL_USE_MPMATH "ON")
   SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} RealHP")
-  MESSAGE(STATUS "${Esc}[32mEnabling RealHP<N>, double, quadruple, octuple precisions are available: RealHP<2>, RealHP<4>, RealHP<8>${Esc}[0m")
+  MESSAGE(STATUS "${Esc}[32mEnabling RealHP<N>, double, quadruple and more precisions are available: RealHP<N> for N ∈ {1,2,3,4,8,10,20}. See file lib/high-precision/RealHPConfig.hpp${Esc}[0m")
 ELSE()
   ADD_DEFINITIONS("-DYADE_DISABLE_REAL_MULTI_HP")
   SET(DISABLED_FEATS "${DISABLED_FEATS} RealHP")
